--- a/services/webapp/package.json
+++ b/services/webapp/package.json
@@ -36,6 +36,7 @@
     "@fontsource/barlow": "^5.2.5",
     "@hookform/resolvers": "^4.1.3",
     "@iconify/react": "^5.2.0",
+    "@mui/icons-material": "^7.3.7",
     "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.1",
     "@mui/material-nextjs": "^7.0.0",
@@ -53,6 +54,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "reactflow": "^11.11.4",
     "simplebar-react": "^3.3.0",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
@@ -60,8 +62,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
-    "@svgr/webpack": "^8.1.0",
     "@playwright/test": "^1.50.1",
+    "@svgr/webpack": "^8.1.0",
     "eslint": "^9.23.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
