--- a/services/webapp/package.json
+++ b/services/webapp/package.json
@@ -34,6 +34,7 @@
     "@fontsource-variable/nunito-sans": "^5.2.5",
     "@fontsource-variable/public-sans": "^5.2.5",
     "@fontsource/barlow": "^5.2.5",
+    "@fps4/component-ui": "^0.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@iconify/react": "^5.2.0",
     "@mui/icons-material": "^7.3.7",
@@ -51,13 +52,17 @@
     "minimal-shared": "^1.0.7",
     "next": "^16.1.6",
     "nprogress": "^0.2.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "remark-gfm": "^4.0.1",
     "reactflow": "^11.11.4",
     "simplebar-react": "^3.3.0",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
+    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
